--- a/Corendon.API/appsettings.json
+++ b/Corendon.API/appsettings.json
@@ -11,5 +11,10 @@
       "DatabaseType": "SqlServer",
       "ConnectionString": "Server=tcp:corendon.database.windows.net,1433;Initial Catalog=corendon-portal;Persist Security Info=False;User ID=sammy;Password=!Corendon135?;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=60;"
     }
+  },
+  "AuthSettings": {
+    "ValidAudience": "AudienceInformation",
+    "ValidIssuer": "IssuerInformation",
+    "Secret": "JWTAuthenticationHIGHsecuredPasswordVVVp1OH7Xzyr"
   }
 }
