--- a/Corendon.Application/Corendon.Application.csproj
+++ b/Corendon.Application/Corendon.Application.csproj
@@ -7,12 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Corendon.Data\Corendon.Data.csproj" />
     <ProjectReference Include="..\Corendon.Repository\Corendon.Repository.csproj" />
+    <ProjectReference Include="..\Corendon.ViewModels\Corendon.ViewModels.csproj" />
   </ItemGroup>
 
 </Project>
